# spumoni

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  pyproject.toml  setup.cfg
CMakeModules/: PatchBonsaiVec.cmake
include/: CMakeLists.txt  spumoni_main.hpp
src/: CMakeLists.txt  compress_dictionary.cpp  compute_ms_pml.cpp  pybindings.cpp  test_harness.cpp
src/pyspumoni/: __init__.py  _core.pyi  aligner.py
